--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
+    "nestjs-pino": "^4.4.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "pino": "^9.11.0",
+    "pino-pretty": "^13.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
