--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.16.1",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
-    "google-auth-library": "^10.3.0",
     "multer": "^2.0.2",
     "nestjs-pino": "^4.4.0",
     "passport": "^0.7.0",
